// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input custom max/min/step match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
<<<<<<< HEAD
          "options": Object {
=======
          "options": {
>>>>>>> updating/18-11-22
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.9.2",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        max={10000}
        min={5000}
        onChange={[Function]}
        overrides={{}}
        reverse={false}
        step={100}
        value={5000}
      >
        <ForwardRef
          className="HoiPoi__Slider__root-4-0"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={{}}
        >
          <div
            className="HoiPoi__InputWrapper__root-4-6 HoiPoi__InputWrapper__vertical-4-10 HoiPoi__Slider__root-4-0"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-4-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-4-9"
                overrides={{}}
              >
                <div
                  className="HoiPoi__Label__root-4-15 HoiPoi__InputWrapper__Label-4-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-4-16"
                    isTruncated={false}
                    overrides={{}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-4-19 HoiPoi__Label__Text-4-16 HoiPoi__Text__body-4-29"
                      style={{}}
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-4-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={{}}
                  className="HoiPoi__Slider__slider-4-1"
                  defaultValue={5000}
                  disabled={false}
                  dotStyle={{}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    [
                      {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={{}}
                  max={10000}
                  min={5000}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={{}}
                  reverse={false}
                  step={100}
                  trackStyle={
                    [
                      {},
                    ]
                  }
                  value={5000}
                  vertical={false}
                >
                  <div
                    className="rc-slider HoiPoi__Slider__slider-4-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={{}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={{}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={{}}
                      dotStyle={{}}
                      dots={false}
                      included={true}
                      lowerBound={5000}
                      marks={{}}
                      max={10000}
                      min={5000}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={100}
                      upperBound={5000}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-4-2"
                      key="0"
                    >
                      <span
                        className="HoiPoi__Slider__overlayLabel-4-3"
                        style={
                          {
                            "left": "0%",
                          }
                        }
                      >
                        5000
                      </span>
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-4-4"
                        disabled={false}
                        dragging="false"
                        max={10000}
                        min={5000}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={{}}
                        value={5000}
                        vertical={false}
                      >
                        <div
                          aria-disabled={false}
                          aria-valuemax={10000}
                          aria-valuemin={5000}
                          aria-valuenow={5000}
                          className="HoiPoi__Slider__overlayHandler-4-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={0}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={5000}
                      marks={{}}
                      max={10000}
                      min={5000}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={5000}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={{}}
            />
          </div>
        </ForwardRef>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input custom tip match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
<<<<<<< HEAD
          "options": Object {
=======
          "options": {
>>>>>>> updating/18-11-22
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.9.2",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={{}}
        reverse={false}
        step={1}
        tipFormatter={[Function]}
        value={0}
      >
        <ForwardRef
          className="HoiPoi__Slider__root-3-0"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={{}}
        >
          <div
            className="HoiPoi__InputWrapper__root-3-6 HoiPoi__InputWrapper__vertical-3-10 HoiPoi__Slider__root-3-0"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-3-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-3-9"
                overrides={{}}
              >
                <div
                  className="HoiPoi__Label__root-3-15 HoiPoi__InputWrapper__Label-3-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-3-16"
                    isTruncated={false}
                    overrides={{}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-3-19 HoiPoi__Label__Text-3-16 HoiPoi__Text__body-3-29"
                      style={{}}
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-3-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={{}}
                  className="HoiPoi__Slider__slider-3-1"
                  defaultValue={0}
                  disabled={false}
                  dotStyle={{}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    [
                      {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={{}}
                  max={100}
                  min={0}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={{}}
                  reverse={false}
                  step={1}
                  trackStyle={
                    [
                      {},
                    ]
                  }
                  value={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider HoiPoi__Slider__slider-3-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={{}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={{}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={{}}
                      dotStyle={{}}
                      dots={false}
                      included={true}
                      lowerBound={0}
                      marks={{}}
                      max={100}
                      min={0}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={1}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-3-2"
                      key="0"
                    >
                      <span
                        className="HoiPoi__Slider__overlayLabel-3-3"
                        style={
                          {
                            "left": "0%",
                          }
                        }
                      >
                        0%
                      </span>
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-3-4"
                        disabled={false}
                        dragging="false"
                        max={100}
                        min={0}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={{}}
                        value={0}
                        vertical={false}
                      >
                        <div
                          aria-disabled={false}
                          aria-valuemax={100}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="HoiPoi__Slider__overlayHandler-3-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={0}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={0}
                      marks={{}}
                      max={100}
                      min={0}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={{}}
            />
          </div>
        </ForwardRef>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
<<<<<<< HEAD
          "options": Object {
=======
          "options": {
>>>>>>> updating/18-11-22
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.9.2",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={{}}
        reverse={false}
        step={1}
        value={0}
      >
        <ForwardRef
          className="HoiPoi__Slider__root-1-0"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={{}}
        >
          <div
            className="HoiPoi__InputWrapper__root-1-6 HoiPoi__InputWrapper__vertical-1-10 HoiPoi__Slider__root-1-0"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-1-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-1-9"
                overrides={{}}
              >
                <div
                  className="HoiPoi__Label__root-1-15 HoiPoi__InputWrapper__Label-1-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-1-16"
                    isTruncated={false}
                    overrides={{}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-1-19 HoiPoi__Label__Text-1-16 HoiPoi__Text__body-1-29"
                      style={{}}
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-1-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={{}}
                  className="HoiPoi__Slider__slider-1-1"
                  defaultValue={0}
                  disabled={false}
                  dotStyle={{}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    [
                      {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={{}}
                  max={100}
                  min={0}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={{}}
                  reverse={false}
                  step={1}
                  trackStyle={
                    [
                      {},
                    ]
                  }
                  value={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider HoiPoi__Slider__slider-1-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={{}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={{}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={{}}
                      dotStyle={{}}
                      dots={false}
                      included={true}
                      lowerBound={0}
                      marks={{}}
                      max={100}
                      min={0}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={1}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-1-2"
                      key="0"
                    >
                      <span
                        className="HoiPoi__Slider__overlayLabel-1-3"
                        style={
                          {
                            "left": "0%",
                          }
                        }
                      >
                        0
                      </span>
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-1-4"
                        disabled={false}
                        dragging="false"
                        max={100}
                        min={0}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={{}}
                        value={0}
                        vertical={false}
                      >
                        <div
                          aria-disabled={false}
                          aria-valuemax={100}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="HoiPoi__Slider__overlayHandler-1-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={0}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={0}
                      marks={{}}
                      max={100}
                      min={0}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={{}}
            />
          </div>
        </ForwardRef>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
<<<<<<< HEAD
          "options": Object {
=======
          "options": {
>>>>>>> updating/18-11-22
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.9.2",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={true}
        label="Lorem ipsum"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={{}}
        reverse={false}
        step={1}
        value={0}
      >
        <ForwardRef
          className="HoiPoi__Slider__root-2-0 HoiPoi__Slider__isReadOnly-2-5"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={{}}
        >
          <div
            className="HoiPoi__InputWrapper__root-2-6 HoiPoi__InputWrapper__vertical-2-10 HoiPoi__Slider__root-2-0 HoiPoi__Slider__isReadOnly-2-5"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-2-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-2-9"
                overrides={{}}
              >
                <div
                  className="HoiPoi__Label__root-2-15 HoiPoi__InputWrapper__Label-2-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-2-16"
                    isTruncated={false}
                    overrides={{}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-2-19 HoiPoi__Label__Text-2-16 HoiPoi__Text__body-2-29"
                      style={{}}
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-2-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={{}}
                  className="HoiPoi__Slider__slider-2-1"
                  defaultValue={0}
                  disabled={true}
                  dotStyle={{}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    [
                      {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={{}}
                  max={100}
                  min={0}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={{}}
                  reverse={false}
                  step={1}
                  trackStyle={
                    [
                      {},
                    ]
                  }
                  value={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider rc-slider-disabled HoiPoi__Slider__slider-2-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={{}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={{}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={{}}
                      dotStyle={{}}
                      dots={false}
                      included={true}
                      lowerBound={0}
                      marks={{}}
                      max={100}
                      min={0}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={1}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-2-2"
                      key="0"
                    >
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-2-4"
                        disabled={true}
                        dragging="false"
                        max={100}
                        min={0}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={{}}
                        value={0}
                        vertical={false}
                      >
                        <div
                          aria-disabled={true}
                          aria-valuemax={100}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="HoiPoi__Slider__overlayHandler-2-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={null}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={0}
                      marks={{}}
                      max={100}
                      min={0}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={{}}
            />
          </div>
        </ForwardRef>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
